crates/rstest-bdd/tests/ui_macros/implicit_fixture_missing.stderr
error: missing implicit fixture
 --> tests/ui_macros/implicit_fixture_missing.rs:7:1
  |
7 | compile_error!("missing implicit fixture");
  | ^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^^
